update the link

--- a/secondyear/secondYear.html
+++ b/secondyear/secondYear.html
@@ -64,29 +64,29 @@
                             <!-- List group -->
                             <div class="list-group" id="myList" role="tablist">
                                 <h4>SUBJECTS</h4>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#home"
-                                    role="tab">OBJECT ORIENTED PROGRAMMING</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#profile"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
+                                    >OBJECT ORIENTED PROGRAMMING</a>
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">OBJECT ORIENTED PROGRAMMING LAB</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#messages"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">ENGINEERING MATHEMATICS III</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action" href="semester3.html"
                                     role="tab">COMPUTER ORGANISATION</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">COMPUTER ORGANISATION LAB</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">DATABASE MANAGEMENT SYSTEM</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">DATABASE MANAGEMENT SYSTEM LAB</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">OPERATING SYSTEMS</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">OPERATING SYSTEMS LAB</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">ENGLISH FOR PROFESSIONAL PURPOSES-I</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">ETHICS AND VALUES</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester3.html"
                                     role="tab">SOFT SKILLS-I</a>
 
                             </div>
@@ -142,25 +142,25 @@
                             <!-- List group -->
                             <div class="list-group" id="myList" role="tablist">
                                 <h4>SUBJECTS</h4>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#home"
-                                    role="tab">DATA STRUCTURES AND ALGORITHMS</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#profile"
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
+                                    >DATA STRUCTURES AND ALGORITHMS</a>
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
                                     role="tab">DATA STRUCTURES AND ALGORITHMS LAB</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#messages"
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
                                     role="tab">DISCRETE MATHEMATICS</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
                                     role="tab">INTRODUCTION TO MICROPROCESSORS</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
                                     role="tab">MICROPROCESSORS LAB</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
                                     role="tab">SOFTWARE ENGINEERING</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
                                     role="tab">COMPUTER NETWORKS</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
                                     role="tab">ENGLISH FOR PROFESSIONAL PURPOSES-II</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
                                     role="tab">ENVIRONMENTAL STUDIES</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="#settings"
+                                <a class="list-group-item list-group-item-action"  href="semester4.html"
                                     role="tab">SOFT SKILLS-II</a>
                                 
                             </div>
