made some changes

--- a/secondyear/secondYear.html
+++ b/secondyear/secondYear.html
@@ -55,7 +55,7 @@
                             aria-expanded="false" aria-controls="collapseExample">
                             Click to view subjects
                         </a>
-                        <button class="btn btn-primary" type="button" onclick="window.location.href='newlist.html'">
+                        <button class="btn btn-primary" type="button" onclick="window.location.href='semester3.html'">
                             Explore
                         </button>
                     </p>
@@ -133,7 +133,7 @@
                             aria-expanded="false" aria-controls="collapseExample2">
                             Click to view subjects
                         </a>
-                        <button class="btn btn-primary" type="button" onclick="window.location.href='newlist.html'">
+                        <button class="btn btn-primary" type="button" onclick="window.location.href='semester4.html'">
                             Explore
                         </button>
                     </p>
