3rd year page is completed

--- a/HTML/CS Branch/3rd_year.html
+++ b/HTML/CS Branch/3rd_year.html
@@ -55,7 +55,7 @@
                             aria-expanded="false" aria-controls="collapseExample">
                             Click to view subjects
                         </a>
-                        <button class="btn btn-primary" type="button" onclick="window.location.href='semester3.html'">
+                        <button class="btn btn-primary" type="button" onclick="window.location.href='5th_semester.html'">
                             Explore
                         </button>
                     </p>
@@ -64,30 +64,32 @@
                             <!-- List group -->
                             <div class="list-group" id="myList" role="tablist">
                                 <h4>SUBJECTS</h4>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    >OBJECT ORIENTED PROGRAMMING</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">OBJECT ORIENTED PROGRAMMING LAB</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">ENGINEERING MATHEMATICS III</a>
-                                <a class="list-group-item list-group-item-action" href="semester3.html"
-                                    role="tab">COMPUTER ORGANISATION</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">COMPUTER ORGANISATION LAB</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">DATABASE MANAGEMENT SYSTEM</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">DATABASE MANAGEMENT SYSTEM LAB</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">OPERATING SYSTEMS</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">OPERATING SYSTEMS LAB</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">ENGLISH FOR PROFESSIONAL PURPOSES-I</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">ETHICS AND VALUES</a>
-                                <a class="list-group-item list-group-item-action"  href="semester3.html"
-                                    role="tab">SOFT SKILLS-I</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    >Machine Learning</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Big Data Analytics</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Theory Of Automata and Formal Languages </a>
+                                <a class="list-group-item list-group-item-action" href="5th_semester.html"
+                                    role="tab">Design Analysis Of Algorithms</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Full Stack Web Development</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">GD And Personal Interview</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Soft Skills</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Design And Analysis Of Algorithms Lab</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Full Stack Web Development Lab</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Machine Learning Lab</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Big Data Analytics Lab</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Leadership And Organizational Behaviour</a>
+                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                    role="tab">Disaster Management</a>
 
                             </div>
 
@@ -133,7 +135,7 @@
                             aria-expanded="false" aria-controls="collapseExample2">
                             Click to view subjects
                         </a>
-                        <button class="btn btn-primary" type="button" onclick="window.location.href='semester4.html'">
+                        <button class="btn btn-primary" type="button" onclick="window.location.href='6th_semester.html'">
                             Explore
                         </button>
                     </p>
@@ -142,26 +144,26 @@
                             <!-- List group -->
                             <div class="list-group" id="myList" role="tablist">
                                 <h4>SUBJECTS</h4>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    >DATA STRUCTURES AND ALGORITHMS</a>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    role="tab">DATA STRUCTURES AND ALGORITHMS LAB</a>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    role="tab">DISCRETE MATHEMATICS</a>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    role="tab">INTRODUCTION TO MICROPROCESSORS</a>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    role="tab">MICROPROCESSORS LAB</a>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    role="tab">SOFTWARE ENGINEERING</a>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    role="tab">COMPUTER NETWORKS</a>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    role="tab">ENGLISH FOR PROFESSIONAL PURPOSES-II</a>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    role="tab">ENVIRONMENTAL STUDIES</a>
-                                <a class="list-group-item list-group-item-action"  href="semester4.html"
-                                    role="tab">SOFT SKILLS-II</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    >Enter The Subject</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    role="tab">Enter The Subject</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    role="tab">Enter The Subject</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    role="tab">Enter The Subject</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    role="tab">Enter The Subject</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    role="tab">Enter The Subject</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    role="tab">Enter The Subject</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    role="tab">Enter The Subject</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    role="tab">Enter The Subject</a>
+                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                    role="tab">Enter The Subject</a>
                                 
                             </div>
 
