update the link

--- a/HTML/CS Branch/3rd_year.html
+++ b/HTML/CS Branch/3rd_year.html
@@ -55,7 +55,7 @@
                             aria-expanded="false" aria-controls="collapseExample">
                             Click to view subjects
                         </a>
-                        <button class="btn btn-primary" type="button" onclick="window.location.href='5th_semester.html'">
+                        <button class="btn btn-primary" type="button" onclick="window.location.href='Third Year/5th_semester.html'">
                             Explore
                         </button>
                     </p>
@@ -64,31 +64,31 @@
                             <!-- List group -->
                             <div class="list-group" id="myList" role="tablist">
                                 <h4>SUBJECTS</h4>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     >Machine Learning</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Big Data Analytics</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Theory Of Automata and Formal Languages </a>
-                                <a class="list-group-item list-group-item-action" href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action" href="Third Year/5th_semester.html"
                                     role="tab">Design Analysis Of Algorithms</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Full Stack Web Development</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">GD And Personal Interview</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Soft Skills</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Design And Analysis Of Algorithms Lab</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Full Stack Web Development Lab</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Machine Learning Lab</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Big Data Analytics Lab</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Leadership And Organizational Behaviour</a>
-                                <a class="list-group-item list-group-item-action"  href="5th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/5th_semester.html"
                                     role="tab">Disaster Management</a>
 
                             </div>
@@ -135,7 +135,7 @@
                             aria-expanded="false" aria-controls="collapseExample2">
                             Click to view subjects
                         </a>
-                        <button class="btn btn-primary" type="button" onclick="window.location.href='6th_semester.html'">
+                        <button class="btn btn-primary" type="button" onclick="window.location.href='Third Year/6th_semester.html'">
                             Explore
                         </button>
                     </p>
@@ -144,25 +144,25 @@
                             <!-- List group -->
                             <div class="list-group" id="myList" role="tablist">
                                 <h4>SUBJECTS</h4>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     >Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     role="tab">Enter The Subject</a>
-                                <a class="list-group-item list-group-item-action"  href="6th_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="Third Year/6th_semester.html"
                                     role="tab">Enter The Subject</a>
                                 
                             </div>
