crousel is modified.

--- a/about us.html
+++ b/about us.html
@@ -129,9 +129,9 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="images/doremon_akarshit.png" alt="Akarshit" height="300" style="width:100%">
+      <img src="images/Screenshot%20from%202020-10-28%2019-22-04.png" alt="Akarshit" height="300" style="width:100%">
       <div class="container">
-        <h2>Akarshit Srivastav</h2>
+        <h2>Akarshit Srivastava</h2>
         <p class="title">Full Stack Web Developer</p>
         <p>.......</p>
         <a class="profile-link" href="mailto:akarshit.srivastav_cs18@gla.ac.in"><i class="fas fa-envelope fa-lg"></i></a>
@@ -193,7 +193,7 @@ html {
             <br>
             <i class="fa fa-phone fa-lg"></i>: +918787203291<br>
             <i class="fa fa-fax fa-lg"></i>: +918601488273<br>
-            <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:harshit.saxena_cs18@gla.ac.in">harshit.saxena_cs18@gla.ac.in</a>
+            <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:harshit.saxena_cs18@gla.ac.in">edu.hub@gmail.com</a>
           </address>
         </div>
         <div class="col-12 col-sm-4 align-self-center">
