--- a/HTML/firstYear/1st_year.html
+++ b/HTML/firstYear/1st_year.html
@@ -64,23 +64,23 @@
                             <!-- List group -->
                             <div class="list-group" id="myList" role="tablist">
                                 <h4>SUBJECTS</h4>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="1st_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="1st_semester.html"
                                     role="tab">Engineering Chemsitry</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="1st_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="1st_semester.html"
                                     role="tab">Computer Programming</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="1st_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="1st_semester.html"
                                     role="tab">Basic Electrical Engineering</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="1st_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="1st_semester.html"
                                     role="tab">English Language Skills For Communication I</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="1st_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="1st_semester.html"
                                     role="tab">Engineering Mathematics I</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="1st_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="1st_semester.html"
                                     role="tab">Engineering Chemsitry Lab</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="1st_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="1st_semester.html"
                                     role="tab">Computer Programming Lab</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="1st_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="1st_semester.html"
                                     role="tab">English Language Lab I</a>
-                                <a class="list-group-item list-group-item-action" data-toggle="list" href="1st_semester.html"
+                                <a class="list-group-item list-group-item-action"  href="1st_semester.html"
                                     role="tab">Engineering Drawing Lab</a>
                                 
                             </div>
