--- a/HTML/firstYear/1st_year.html
+++ b/HTML/firstYear/1st_year.html
@@ -28,9 +28,9 @@
     <div class="container">
 
         <div class="row">
-            <ol class="col-12 breadcrumb">
-                <li class="breadcrumb-item"><a href="./../../../index.php">Home</a></li>
-                <li class="breadcrumb-item active">First Year</li>
+            <ol class="col-12 breadcrumb " style="background-color: darkslategrey;">
+                <li class="breadcrumb-item"><a href="http://localhost/Edu_Hub/">Home</a></li>
+                <li class="breadcrumb-item active" style="color: white;">First Year</li>
             </ol>
             <div class="col-12">
                 <h3>First Year</h3>
