update the links in semester pages

--- a/HTML/firstYear/2nd_semester.html
+++ b/HTML/firstYear/2nd_semester.html
@@ -27,6 +27,20 @@
 
 
     <div class="container">
+
+        <div class="row">
+            <ol class="col-12 breadcrumb"  style="background-color: darkslategrey;">
+                <li class="breadcrumb-item"><a href="http://localhost/Edu_Hub/">Home</a></li>
+                <li class="breadcrumb-item"><a href="1st_year.html">First Year</a></li>
+                <li class="breadcrumb-item active" style="color: white;">Semester 2</li>
+            </ol>
+            <div class="col-12">
+                <h3>Semester-2</h3>
+                <hr>
+            </div>
+        </div>
+
+
         <div class="row">
             <div class="col-md-4">
                 <div class="card card-1">
