--- a/secondyear/semester4.html
+++ b/secondyear/semester4.html
@@ -27,6 +27,21 @@
 
 
     <div class="container">
+
+
+        <div class="row">
+            <ol class="col-12 breadcrumb"  style="background-color: darkslategrey;">
+                <li class="breadcrumb-item"><a href="http://localhost/Edu_Hub/">Home</a></li>
+                <li class="breadcrumb-item"><a href="secondYear.html">Second Year</a></li>
+                <li class="breadcrumb-item active" style="color: white;">Semester 4</li>
+            </ol>
+            <div class="col-12">
+                <h3>Semester-4</h3>
+                <hr>
+            </div>
+        </div>
+
+
         <div class="row">
             <div class="col-md-4">
                 <div class="card card-1">
