add the link of os  pdf

--- a/secondyear/semester3.html
+++ b/secondyear/semester3.html
@@ -73,8 +73,8 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, eligendi!</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/os/os 2nd module.pdf')">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/os/os third.pdf')" >Mod3</button>
                     </div>
 
                 </div>
