--- a/secondyear/semester3.html
+++ b/secondyear/semester3.html
@@ -85,7 +85,7 @@
                     <h3>Computer Organization</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/co/CO mid term1.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info">Mod2</button>
                         <button type="button" class="btn btn-outline-info">Mod3</button>
                     </div>
