--- a/secondyear/semester3.html
+++ b/secondyear/semester3.html
@@ -47,7 +47,7 @@
                     <h3>Oject Oriented Programming</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, earum.</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/oops/OOPs mid term1-1.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info">Mod2</button>
                         <button type="button" class="btn btn-outline-info">Mod3</button>
                     </div>
@@ -137,7 +137,7 @@
                     <h3>Object Oriented Programming Lab</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" >Mod1</button>
                         <button type="button" class="btn btn-outline-info">Mod2</button>
                         <button type="button" class="btn btn-outline-info">Mod3</button>
                     </div>
