--- a/secondyear/semester4.html
+++ b/secondyear/semester4.html
@@ -73,8 +73,8 @@
                     <h3>Introduction to Microprocessors</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, eligendi!</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/microprocessor/micro mod 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/microprocessor/micro 2.pdf')">Mod2</button>
                         <button type="button" class="btn btn-outline-info">Mod3</button>
                     </div>
 
