--- a/secondyear/semester4.html
+++ b/secondyear/semester4.html
@@ -48,7 +48,7 @@
                     <h3>Environmental Studies</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, earum.</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Environmental Studies/EVs mod 1.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info">Mod2</button>
                         <button type="button" class="btn btn-outline-info">Mod3</button>
                     </div>
