--- a/secondyear/semester3.html
+++ b/secondyear/semester3.html
@@ -49,7 +49,7 @@
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/oops/OOPs mid term1-1.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info">Mod2</button>
-                        <button type="button" class="btn btn-outline-info">Mod3</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/oops/oops module 3.pdf')">Mod3</button>
                     </div>
                 </div>
             </div>
