update the link of discrete math of mod 2

--- a/secondyear/semester4.html
+++ b/secondyear/semester4.html
@@ -113,7 +113,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, facere?</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-info">Mod1</button>
-                        <button type="button" class="btn btn-outline-info">Mod2</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/Discrete Mathematics/discrete mod 2.pdf')">Mod2</button>
                         <button type="button" class="btn btn-outline-info">Mod3</button>
                     </div>
 
