--- a/HTML/firstYear/2nd_semester.html
+++ b/HTML/firstYear/2nd_semester.html
@@ -98,7 +98,7 @@
                     <h3>Basic Mechanical Engineering</h3>
                     <p>Click here to view pdf</p>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <button type="button" class="btn btn-outline-info" onclick="window.open('../pdf/BME/Module 1.pdf')">Mod1</button>
+                        <button type="button" class="btn btn-outline-info" onclick="window.open('../../pdf/BME/Module 1.pdf')">Mod1</button>
                         <button type="button" class="btn btn-outline-info">Mod2</button>
                         <button type="button" class="btn btn-outline-info">Mod3</button>
                     </div>
