updated profile pic and info

--- a/about us.html
+++ b/about us.html
@@ -115,11 +115,13 @@ html {
 
   <div class="column">
     <div class="card">
-      <img src="images/gian_akshat.png" alt="Akshat" height="300" style="width:100%">
+      <img src="images/me.png" alt="Akshat" height="300" style="width:100%">
       <div class="container">
         <h2>Akshat Sinha</h2>
         <p class="title">Designer and Front End Developer</p>
-        <p>.......</p>
+        <p>Hi Guys, This is Akshat Sinha and I'm from GLA University
+          and below here are my contact links.
+        </p>
   <a class="profile-link" href="mailto:akshat.sinha_cs18@gla.ac.in"><i class="fas fa-envelope fa-lg"></i></a>
   <a class="profile-link" href="https://github.com/Akshat555624"><i class="fab fa-github fa-lg"></i></a>
         <p><button class="button">Contact</button></p>
